new "audio" button in 2.70 release does not 'mixdown' audio #38768

Closed
opened 2014-02-23 02:14:36 +01:00 by interlichtspielhaus · 15 comments

System Information

ubuntu 12.10 / gtx 580

Blender Version
Broken: 2.70

Short description of error

i've been trying to use the new "Audio" button next to the Render buttons

i tried it both in my local daily builds
and now in the "official" version found here
http://download.blender.org/release/Blender2.70/

an audio file gets always created
but just a couple of bytes big

i don't have any sound problems within the Video Sequence Editor
when i render an animation with sound

**System Information** ubuntu 12.10 / gtx 580 **Blender Version** Broken: 2.70 **Short description of error** i've been trying to use the new "Audio" button next to the Render buttons i tried it both in my local daily builds and now in the "official" version found here http://download.blender.org/release/Blender2.70/ an audio file gets always created but just a couple of bytes big i don't have any sound problems within the Video Sequence Editor when i render an animation with sound

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @intrah

Added subscriber: @intrah

Added subscriber: @DZWX

Added subscriber: @DZWX

I tried each audio output option from a sequence of a wav, mp3, and an aif.

.flac - worked
.wav - worked
.mkv - made a silent file of the proper duration
.mp3 - Blender crashed
.mp2 - Blender crashed
.ogg - crashed
.ac3 - Report:Error ! AUD_FileWriter: File couldn't be written.

iMac 2.66 GHz Intel Core 2 Duo, ATI Radeon HD 2600 Pro 256 MB, OS 10.8.5
Blender 2.69 2014-02-20 05:32 Hash:4789793

I tried each audio output option from a sequence of a wav, mp3, and an aif. .flac - worked .wav - worked .mkv - made a silent file of the proper duration .mp3 - Blender crashed .mp2 - Blender crashed .ogg - crashed .ac3 - Report:Error ! AUD_FileWriter: File couldn't be written. iMac 2.66 GHz Intel Core 2 Duo, ATI Radeon HD 2600 Pro 256 MB, OS 10.8.5 Blender 2.69 2014-02-20 05:32 Hash:4789793

Added subscribers: @Sergey, @mont29, @ThomasDinges

Added subscribers: @Sergey, @mont29, @ThomasDinges

@mont29, afair you worked on this button. And i'm not really familiar with this code..

@mont29, afair you worked on this button. And i'm not really familiar with this code..
Bastien Montagne was assigned by Sergey Sharybin 2014-02-27 10:21:31 +01:00
Bastien Montagne removed their assignment 2014-02-27 15:53:53 +01:00
Sergey Sharybin was assigned by Bastien Montagne 2014-02-27 15:53:53 +01:00

Ok, issue is with ffmpeg, comes from 2b858b45c2

Checked, even in current code commenting out FFMPEG_HAVE_ENCODE_AUDIO2 definition in ffmpeg_compat.h is enough to fix the issue. So error is somewhere in code inside FFMPEG_HAVE_ENCODE_AUDIO2's ifdefs, in AUD_FFMPEGWriter.cpp file.

@Sergey, assigning this one to you, since you are our ffmpeg guy. If solution is not easy to find, we can always just comment out that new FFMPEG_HAVE_ENCODE_AUDIO2 code for 2.70, I guess?

Ok, issue is with ffmpeg, comes from 2b858b45c2 Checked, even in current code commenting out FFMPEG_HAVE_ENCODE_AUDIO2 definition in ffmpeg_compat.h is enough to fix the issue. So error is somewhere in code inside FFMPEG_HAVE_ENCODE_AUDIO2's ifdefs, in AUD_FFMPEGWriter.cpp file. @Sergey, assigning this one to you, since you are our ffmpeg guy. If solution is not easy to find, we can always just comment out that new FFMPEG_HAVE_ENCODE_AUDIO2 code for 2.70, I guess?

Added subscriber: @neXyon

Added subscriber: @neXyon

Do have a patch for audaspace which makes FFMPEG_HAVE_ENCODE_AUDIO2 branches behave the same as in writeffmpeg.c. Seems to be working now.

But need to summon @neXyon here anyway so he can keep an eye on the changes.

Do have a patch for audaspace which makes `FFMPEG_HAVE_ENCODE_AUDIO2` branches behave the same as in writeffmpeg.c. Seems to be working now. But need to summon @neXyon here anyway so he can keep an eye on the changes.

This issue was referenced by blender/blender-addons-contrib@32d5cc247f

This issue was referenced by blender/blender-addons-contrib@32d5cc247fc1cf9a71492a26cebf99f9505bb82a

This issue was referenced by 32d5cc247f

This issue was referenced by 32d5cc247fc1cf9a71492a26cebf99f9505bb82a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 32d5cc247f.

Closed by commit 32d5cc247f.

Commited a fix. Please give it a try and see whether all the combinations works.

Commited a fix. Please give it a try and see whether all the combinations works.

Final fix has been committed at 5ac1b38.

Final fix has been committed at 5ac1b38.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38768
No description provided.